--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,85 @@
+.landingsPage {
+    background-image: url(https://wallpapercave.com/wp/wp2757874.gif);
+    background-size: cover;
+    height: 100vh;
+    padding: 0;
+    margin: 0;
+}
+
+.landingsPageText {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: fit-content;
+    height: fit-content;
+    text-align: center;
+    border: solid;
+    border-width: 1px;
+    border-radius: 50px;
+    padding: 30px;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.landingsPage h1 {
+    color: white;
+    font-family: Monsterrat;
+    font-weight: bolder;
+    padding-bottom: 10px;
+}
+
+.landingsPage button {
+    background: none;
+    text-align: center;
+    border-color: white;
+    padding: 10px;
+    color: white;
+}
+
+.landingsPage button:hover {
+    background-color: rgba(241, 54, 55, 0.7);
+    text-align: center;
+    border-color: white;
+    padding: 10px;
+    color: white;
+}
 @font-face {
     font-family: Azonix;
-    src: url(Azonix.otf)
+    src: url(../Azonix.otf);
+    font-display: swap;
 }
+
+@font-face {
+    font-family: Montserrat;
+    src: url(../Montserrat-Regular.ttf);
+    font-display: swap;
+}
+
+@-webkit-keyframes spin {
+    0%   {
+        -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+        -ms-transform: rotate(0deg);  /* IE 9 */
+        transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
+    }
+    100% {
+        -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+        -ms-transform: rotate(360deg);  /* IE 9 */
+        transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
+    }
+}
+@keyframes spin {
+    0%   {
+        -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+        -ms-transform: rotate(0deg);  /* IE 9 */
+        transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
+    }
+    100% {
+        -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+        -ms-transform: rotate(360deg);  /* IE 9 */
+        transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
+    }
+}
+
 html {
     min-height: 100vh;
 }
@@ -9,7 +87,7 @@ html {
 body{
     padding: 0;
     margin: 0;
-    background-image: url(background.png);
+    background-image: url(../background.png);
     background-size:cover;
     background-position: center;
 }
@@ -61,57 +139,10 @@ header {
     flex-direction: column;
 }
 
-.sidebar {
-    min-height: 100%;
-    width: 25%;
-}
-
-.mainbar {
-    min-height: 100%;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-}
-
-.container {
-    background-color: white;
-    border-radius: 15px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-direction: column;
-    text-align: center;
-}
-
-.container h1 {
-   margin: 0;
-   margin-top: 10px;
-   font-size: 40px;
-   font-family: Azonix;
-}
-
-.container h2 {
-    margin-left: 20px;
-    margin-right: 20px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
-
-.container a {
-    color: black;
-}
-
 .content {
     display: flex;
     flex-direction: row;
     min-height: 100%;
-    width: 100%;
-}
-
-.marginDiv {
-    display: flex;
-    min-height: 50px;
-    max-height: 100px;
     width: 100%;
 }
 
@@ -211,31 +242,6 @@ footer {
 
     -webkit-animation: spin 1.5s linear infinite;
     animation: spin 1.5s linear infinite;
-}
-
-@-webkit-keyframes spin {
-    0%   {
-        -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-        -ms-transform: rotate(0deg);  /* IE 9 */
-        transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
-    }
-    100% {
-        -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-        -ms-transform: rotate(360deg);  /* IE 9 */
-        transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
-    }
-}
-@keyframes spin {
-    0%   {
-        -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-        -ms-transform: rotate(0deg);  /* IE 9 */
-        transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
-    }
-    100% {
-        -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-        -ms-transform: rotate(360deg);  /* IE 9 */
-        transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
-    }
 }
 
 #loader-wrapper .loader-section {
