--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@
     padding-bottom: 10px;
 }
 
-.landingsPage button {
+.landingsPageButton {
     background: none;
     text-align: center;
     border-color: white;
@@ -36,13 +36,13 @@
     color: white;
 }
 
-.landingsPage button:hover {
+.landingsPageButton:hover {
     background-color: rgba(241, 54, 55, 0.7);
     text-align: center;
     border-color: white;
-    padding: 10px;
     color: white;
 }
+
 @font-face {
     font-family: Azonix;
     src: url(../Azonix.otf);
