Changes: - Added collapsible navbar

--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-.sidebar {
+/* .sidebar {
     min-height: 100%;
     width: 25%;
 }
@@ -43,4 +43,4 @@
     min-height: 50px;
     max-height: 100px;
     width: 100%;
-}
+} */
