--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,17 @@
     height: 100vh;
 }
 
+.column {
+    padding: 30px;
+    text-align: center;
+}
+
+.column h2 {
+    padding-top: 10px;
+    padding-bottom: 5px;
+    color: rgb(241, 54, 55);
+}
+
 @font-face {
     font-family: Azonix;
     src: url(../Azonix.otf);
