--- a/css/main.css
+++ b/css/main.css
@@ -59,9 +59,6 @@
 .navbarButton {
     margin-left: 10px;
 }
-.projectsPage {
-    height: 100vh;
-}
 
 .column {
     padding: 30px;
@@ -90,6 +87,52 @@
     color: rgb(241, 54, 55);
 }
 
+.projectColumn {
+    background-image: url(https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg);
+    background-size: cover;
+    padding: 0;
+    display: flex;
+    align-items: center;
+}
+
+.projectColumn:after {
+    content: "";
+    display: block;
+    padding-bottom: 100%;
+  }
+
+.projectText {
+    width: 90%;
+    height: 90%;
+    margin-left: 5%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    background-color: rgba(24, 24, 32, 0.7);
+    transition: width 1s, height 1s, margin 1s;
+}
+
+.projectText:hover {
+    background-color: rgba(24, 24, 32, 1);
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+
+.projectText:hover p1 {
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.projectText p1 {
+    color: white;
+    font-family: Monsterrat;
+    font-weight: bolder;
+    font-size: larger;  
+    width:initial;
+    transition: margin 1s;
+}
+
 #about {
     padding-top: 50px;
     margin-top: -50px;
@@ -103,6 +146,10 @@
 #projects {
     padding-top: 50px;
     margin-top: -50px;
+}
+
+.footer {
+    margin-top: 50px;
 }
 
 @font-face {
