--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,7 @@
     align-items: center;
     background-color: rgba(24, 24, 32, 0.7);
     transition: width 1s, height 1s, margin 1s;
+    text-decoration: none;
 }
 
 .projectText:hover {
