--- a/css/main.css
+++ b/css/main.css
@@ -1,191 +1,201 @@
 .landingsPage {
-    background-image: url(https://wallpapercave.com/wp/wp2757874.gif);
-    background-size: cover;
-    height: 100vh;
-    padding: 0;
-    margin: 0;
+  background-image: url(https://wallpapercave.com/wp/wp2757874.gif);
+  background-size: cover;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
 }
 
 .landingsPageText {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: fit-content;
-    height: fit-content;
-    text-align: center;
-    border: solid;
-    border-width: 1px;
-    border-radius: 50px;
-    padding: 30px;
-    background-color: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: fit-content;
+  height: fit-content;
+  text-align: center;
+  border: solid;
+  border-width: 1px;
+  border-radius: 50px;
+  padding: 30px;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .landingsPage h1 {
-    color: white;
-    font-family: Monsterrat;
-    font-weight: bolder;
-    padding-bottom: 10px;
+  color: white;
+  font-family: Monsterrat;
+  font-weight: bolder;
+  padding-bottom: 10px;
 }
 
 .landingsPageButton {
-    background: none;
-    text-align: center;
-    border-color: white;
-    color: white;
+  background: none;
+  text-align: center;
+  border-color: white;
+  color: white;
 }
 
 .landingsPageButton:hover {
-    background-color: rgba(241, 54, 55, 0.7);
-    text-align: center;
-    border-color: white;
-    color: white;
+  background-color: rgba(241, 54, 55, 0.7);
+  text-align: center;
+  border-color: white;
+  color: white;
 }
 
 .navbarCustom {
-    border: solid;
-    border-left: 0px;
-    border-right: 0px;
-    border-top: 0px;
-    border-color: rgb(241, 54, 55);
-    background-color: rgb(24, 24, 32);
+  border: solid;
+  border-left: 0px;
+  border-right: 0px;
+  border-top: 0px;
+  border-color: rgb(241, 54, 55);
+  background-color: rgb(24, 24, 32);
 }
 
 .navItem {
-    padding-left: 10px;
-    padding-right: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .navbarButton {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 .column {
-    padding: 30px;
-    text-align: center;
+  padding: 30px;
+  text-align: center;
 }
 
 .column h2 {
-    padding-top: 10px;
-    padding-bottom: 5px;
-    color: rgb(241, 54, 55);
+  padding-top: 10px;
+  padding-bottom: 5px;
+  color: rgb(241, 54, 55);
 }
 
 .column-left {
-    padding: 30px;
-    text-align: right;
+  padding: 30px;
+  text-align: right;
 }
 
 .column-right {
-    padding: 30px;
-    text-align: left;
+  padding: 30px;
+  text-align: left;
 }
 
 .column-right h2 {
-    padding-top: 10px;
-    padding-bottom: 5px;
-    color: rgb(241, 54, 55);
+  padding-top: 10px;
+  padding-bottom: 5px;
+  color: rgb(241, 54, 55);
 }
 
 .projectColumn {
-    background-image: url(https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg);
-    background-size: cover;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    background-position: center;
+  background-image: url(https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg);
+  background-size: cover;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.projectContainer {
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
 .projectColumn:after {
-    content: "";
-    display: block;
-    padding-bottom: 100%;
-  }
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
 
 .projectText {
-    width: 90%;
-    height: 90%;
-    margin-left: 5%;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    background-color: rgba(24, 24, 32, 0.7);
-    text-decoration: none;
-    overflow: hidden;
-    padding: 5px;
-    -webkit-transition: width 1s, height 1s, margin 1s, background-color 1s;
-    -moz-transition: width 1s, height 1s, margin 1s, background-color 1s;
-    -o-transition: width 1s, height 1s, margin 1s, background-color 1s;
-    transition: width 1s, height 1s, margin 1s, background-color 1s;
+  width: 90%;
+  height: 90%;
+  margin-left: 5%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: rgba(24, 24, 32, 0.7);
+  text-decoration: none;
+  overflow: hidden;
+  padding: 5px;
+
+  -webkit-transition: width 0.75s, height 0.75s, margin 0.75s,
+    background-color 0.75s;
+  -moz-transition: width 0.75s, height 0.75s, margin 0.75s,
+    background-color 0.75s;
+  -o-transition: width 0.75s, height 0.75s, margin 0.75s, background-color 0.75s;
+  transition: width 0.75s, height 0.75s, margin 0.75s, background-color 0.75s;
 }
 
 .projectText:hover {
-    background-color: rgba(24, 24, 32, 1);
-    width: 100%;
-    height: 100%;
-    margin: 0;
+  background-color: rgba(24, 24, 32, 1);
+  width: 100%;
+  height: 100%;
+  margin: 0;
 }
 
 .projectText:hover p1 {
-    margin-left: 5%;
-    margin-right: 5%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .projectText p1 {
-    color: white;
-    font-family: Monsterrat;
-    font-weight: bolder;
-    font-size: larger;  
-    width:initial;
-    -webkit-transition: margin 1s;
-    -moz-transition: margin 1s;
-    -o-transition: margin 1s;
-    transition: margin 1s;
+  color: white;
+  font-family: Monsterrat;
+  font-weight: bolder;
+  font-size: larger;
+  width: initial;
+  -webkit-transition: margin 0.75s;
+  -moz-transition: margin 0.75s;
+  -o-transition: margin 0.75s;
+  transition: margin 0.75s;
 }
 
 .projectText h1 {
-    color: white;
-    font-family: Monsterrat;
-    text-decoration: underline;
+  color: white;
+  font-family: Monsterrat;
+  font-weight: bolder;
 }
 
 #about {
-    padding-top: 50px;
-    margin-top: -50px;
+  padding-top: 50px;
+  margin-top: -50px;
 }
 
 #skills {
-    padding-top: 50px;
-    margin-top: -50px;
+  padding-top: 50px;
+  margin-top: -50px;
 }
 
 #projects {
-    padding-top: 50px;
-    margin-top: -50px;
+  padding-top: 50px;
+  margin-top: -50px;
 }
 
 .footer {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 @font-face {
-    font-family: Azonix;
-    src: url(../Azonix.otf);
-    font-display: swap;
+  font-family: Azonix;
+  src: url(../Azonix.otf);
+  font-display: swap;
 }
 
 @font-face {
-    font-family: Montserrat;
-    src: url(../Montserrat-Regular.ttf);
-    font-display: swap;
+  font-family: Montserrat;
+  src: url(../Montserrat-Regular.ttf);
+  font-display: swap;
 }
 
 @media (max-width: 768px) {
-    .column-right {
-        text-align: center;
-    }
+  .column-right {
+    text-align: center;
+  }
 
-    .column-left {
-        padding-top: 30px;
-    }
+  .column-left {
+    padding-top: 30px;
+  }
 }
